# CppExceptions

./: README.md
adding_context_with_cout/: CMakeLists.txt  adding_context_with_cout.cpp
adding_context_with_mutable_what/: CMakeLists.txt  adding_context_with_mutable_what.cpp
adding_context_with_repackage/: CMakeLists.txt  adding_context_with_repackage.cpp
bad_resource_management/: CMakeLists.txt  bad_resource_management.cpp
checking_with_exceptions/: CMakeLists.txt  checking_with_exceptions.cpp
checking_with_return_enum/: CMakeLists.txt  checking_with_return_enum.cpp
exception_data_passing/: CMakeLists.txt  exception_data_passing.cpp
exceptional_control_flow_different_operation/: CMakeLists.txt  exceptional_control_flow_different_operation.cpp
exceptional_control_flow_same_operation/: CMakeLists.txt  exceptional_control_flow_same_operation.cpp
expected_control_flow_different_operations/: CMakeLists.txt  expected_control_flow_different_operations.cpp
expected_control_flow_generic_lambda/: CMakeLists.txt
expected_data_passing/: CMakeLists.txt  expected_data_passing.cpp
expected_templated_data_passing/: CMakeLists.txt  expected_templated_data_passing.cpp
omega_exception/: CMakeLists.txt  omega_exception.cpp
raii_resource_management/: CMakeLists.txt  raii_resource_management.cpp
retrying_with_exceptions/: CMakeLists.txt  retrying_with_exceptions.cpp
retrying_without_exceptions/: CMakeLists.txt  retrying_without_exceptions.cpp
search_failure_with_exceptions/: CMakeLists.txt  search_failure_with_exceptions.cpp
search_failure_with_optional/: CMakeLists.txt  search_failure_with_optional.cpp
using_exceptions/: CMakeLists.txt  using_exceptions.cpp
using_return_codes/: CMakeLists.txt  using_return_codes.cpp
